--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@types/mongodb": "^3.6.6",
+    "aws-sdk": "^2.844.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.2",
     "cors": "^2.8.5",
     "date-fns": "^2.14.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.4",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
     "pg": "^8.3.0",
@@ -29,6 +35,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
+    "@types/hapi__joi": "^17.1.6",
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
